[package]
name = "hmmcl-sandbox"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hmmcl_sandbox"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = {version="0.22.1", features=["init-if-needed"]}
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
ndarray = "0.15.4"
thiserror = "1.0.30"

[dev-dependencies]
proptest = { version = "1.0.0" }